--- a/EkgDroid/app/src/main/res/values/colors.xml
+++ b/EkgDroid/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="color_hot_red">#ff0000</color>
     <color name="color_navy_blue">#637e9e</color>
     <color name="color_dark_navy_blue">#405974</color>
+    <color name="color_sky_blue">#00aeff</color>
 </resources>
