--- a/EkgDroid/app/src/main/res/layout/activity_monitor.xml
+++ b/EkgDroid/app/src/main/res/layout/activity_monitor.xml
@@ -28,7 +28,7 @@
         android:background="@color/color_navy_blue"
         android:gravity="center_vertical"
         android:orientation="vertical"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,7 +47,6 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="top|right"
                 android:padding="8dp"
-                android:text="@string/test_numb_500"
                 android:textSize="36sp" />
 
             <TextView
@@ -99,7 +98,6 @@
                     android:layout_margin="2dp"
                     android:background="@color/color_clearWhite"
                     android:padding="2dp"
-                    android:text="@string/test_range_ms"
                     android:textColor="@color/color_pithcBlack"
                     android:textSize="14sp" />
 
@@ -112,7 +110,6 @@
                     android:background="@color/color_clearWhite"
                     android:gravity="center"
                     android:padding="4dp"
-                    android:text="@string/test_numb_500"
                     android:textAlignment="center"
                     android:textColor="@color/color_sky_blue"
                     android:textSize="24sp">
@@ -145,7 +142,6 @@
                     android:layout_margin="2dp"
                     android:background="@color/color_clearWhite"
                     android:padding="2dp"
-                    android:text="@string/test_range_ms"
                     android:textColor="@color/color_pithcBlack"
                     android:textSize="14sp" />
 
@@ -158,7 +154,6 @@
                     android:background="@color/color_clearWhite"
                     android:gravity="center"
                     android:padding="4dp"
-                    android:text="@string/test_numb_500"
                     android:textAlignment="center"
                     android:textColor="@color/color_sky_blue"
                     android:textSize="24sp">
@@ -191,7 +186,6 @@
                     android:layout_margin="2dp"
                     android:background="@color/color_clearWhite"
                     android:padding="2dp"
-                    android:text="@string/test_range_ms"
                     android:textColor="@color/color_pithcBlack"
                     android:textSize="14sp" />
 
@@ -205,7 +199,6 @@
                     android:baselineAligned="false"
                     android:gravity="center"
                     android:padding="4dp"
-                    android:text="@string/test_numb_500"
                     android:textAlignment="center"
                     android:textColor="@color/color_sky_blue"
                     android:textSize="24sp">
@@ -238,7 +231,6 @@
                     android:layout_margin="2dp"
                     android:background="@color/color_clearWhite"
                     android:padding="2dp"
-                    android:text="@string/test_range_ms"
                     android:textColor="@color/color_pithcBlack"
                     android:textSize="14sp" />
 
@@ -251,7 +243,6 @@
                     android:background="@color/color_clearWhite"
                     android:gravity="center"
                     android:padding="4dp"
-                    android:text="@string/test_numb_500"
                     android:textAlignment="center"
                     android:textColor="@color/color_sky_blue"
                     android:textSize="24sp">
@@ -289,68 +280,74 @@
         android:layout_height="0dp"
         android:layout_marginTop="40dp"
         android:orientation="vertical"
-        android:visibility="gone"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <TableLayout
+        <LinearLayout
+            android:id="@+id/db_header"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#eeeeee"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-            <TableRow
+            <TextView
+                android:id="@+id/db_lbl_nama"
+                android:layout_width="0px"
+                android:layout_height="wrap_content"
+                android:layout_weight="6"
+                android:background="@color/color_tabHeader"
+                android:padding="2dp"
+                android:text="@string/lbl_nama"
+                android:textColor="#000000" />
+
+            <TextView
+                android:id="@+id/db_lbl_usia"
+                android:layout_width="0px"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:background="@color/color_tabHeader"
+                android:padding="2dp"
+                android:text="@string/lbl_usia"
+                android:textColor="#000000" />
+
+            <TextView
+                android:id="@+id/db_lbl_tanggal"
+                android:layout_width="0px"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:background="@color/color_tabHeader"
+                android:padding="2dp"
+                android:text="@string/db_lbl_tanggal"
+                android:textColor="#000000" />
+
+            <TextView
+                android:id="@+id/db_lbl_hasil"
+                android:layout_width="0px"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:background="@color/color_tabHeader"
+                android:padding="2dp"
+                android:text="@string/db_lbl_hasil"
+                android:textColor="#000000" />
+        </LinearLayout>
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TableLayout
+                android:id="@+id/db_parent"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
+                android:layout_height="wrap_content"
+                android:background="#eeeeee"
+                android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/db_lbl_nama"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="2"
-                    android:background="@color/color_tabHeader"
-                    android:paddingEnd="128dp"
-                    android:paddingStart="8dp"
-                    android:text="@string/lbl_nama"
-                    android:textColor="#000000" />
+            </TableLayout>
+        </ScrollView>
 
-                <TextView
-                    android:id="@+id/db_lbl_usia"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@color/color_tabHeader"
-                    android:paddingEnd="8dp"
-                    android:paddingStart="16dp"
-                    android:text="@string/lbl_usia"
-                    android:textColor="#000000" />
-
-                <TextView
-                    android:id="@+id/db_lbl_tanggal"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@color/color_tabHeader"
-                    android:paddingEnd="8dp"
-                    android:paddingStart="16dp"
-                    android:text="@string/db_lbl_tanggal"
-                    android:textColor="#000000" />
-
-                <TextView
-                    android:id="@+id/db_lbl_hasil"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:background="@color/color_tabHeader"
-                    android:paddingEnd="8dp"
-                    android:paddingStart="16dp"
-                    android:text="@string/db_lbl_hasil"
-                    android:textColor="#000000" />
-            </TableRow>
-
-        </TableLayout>
     </LinearLayout>
 
     <LinearLayout
