--- a/EkgDroid/app/src/main/res/layout/activity_daftar.xml
+++ b/EkgDroid/app/src/main/res/layout/activity_daftar.xml
@@ -242,7 +242,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
-                    android:inputType="text|date"
+                    android:inputType="date"
                     android:paddingEnd="0dp"
                     android:paddingStart="8dp"
                     android:textColor="@color/color_pithcBlack" />
