--- a/EkgDroid/app/src/main/res/layout/activity_monitor.xml
+++ b/EkgDroid/app/src/main/res/layout/activity_monitor.xml
@@ -28,7 +28,7 @@
         android:background="@color/color_navy_blue"
         android:gravity="center_vertical"
         android:orientation="vertical"
-        android:visibility="gone"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,6 +40,13 @@
             android:layout_height="0px"
             android:layout_weight="4"
             android:background="@color/color_dark_navy_blue">
+
+            <FrameLayout
+                android:id="@+id/ekg_grid"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            </FrameLayout>
 
             <TextView
                 android:id="@+id/res_bpm"
@@ -282,7 +289,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="40dp"
         android:orientation="vertical"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -438,7 +445,8 @@
                 android:id="@+id/btn_setting"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/btn_setting" />
+                android:text="@string/btn_setting"
+                android:visibility="gone" />
 
             <Button
                 android:id="@+id/btn_exit"
