--- a/EkgDroid/app/src/main/res/layout/activity_monitor.xml
+++ b/EkgDroid/app/src/main/res/layout/activity_monitor.xml
@@ -274,13 +274,6 @@
             android:text="@string/btn_startReading"
             android:visibility="gone" />
 
-        <Button
-            android:id="@+id/btn_setting"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/btn_setting"
-            android:visibility="gone" />
-
     </LinearLayout>
 
     <LinearLayout
@@ -404,7 +397,7 @@
         android:layout_height="0dp"
         android:baselineAligned="false"
         android:orientation="horizontal"
-        android:visibility="gone"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -442,11 +435,11 @@
                 android:text="@string/btn_info" />
 
             <Button
-                android:id="@+id/btn_setting"
+                android:id="@+id/btn_change_user"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/btn_setting"
-                android:visibility="gone" />
+                android:text="@string/btn_change_user"
+                android:visibility="visible" />
 
             <Button
                 android:id="@+id/btn_exit"
