Add result pop up after ecg data read

--- a/EkgDroid/app/src/main/res/values/colors.xml
+++ b/EkgDroid/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="color_navy_blue">#637e9e</color>
     <color name="color_dark_navy_blue">#405974</color>
     <color name="color_sky_blue">#00aeff</color>
+    <color name="color_fresh_green">#2cef05</color>
 </resources>
