--- a/EkgDroid/app/src/main/res/layout/activity_monitor.xml
+++ b/EkgDroid/app/src/main/res/layout/activity_monitor.xml
@@ -54,6 +54,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="top|right"
                 android:padding="8dp"
+                android:textColor="@color/color_fresh_green"
                 android:textSize="36sp" />
 
             <TextView
@@ -397,7 +398,7 @@
         android:layout_height="0dp"
         android:baselineAligned="false"
         android:orientation="horizontal"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
