--- a/EkgDroid/app/src/main/res/values/arrays.xml
+++ b/EkgDroid/app/src/main/res/values/arrays.xml
@@ -20,6 +20,9 @@
         <item>A-</item>
         <item>A</item>
         <item>A+</item>
+        <item>AB-</item>
+        <item>AB</item>
+        <item>AB+</item>
         <item>B-</item>
         <item>B</item>
         <item>B+</item>
