--- a/EkgDroid/app/src/main/res/layout/activity_monitor.xml
+++ b/EkgDroid/app/src/main/res/layout/activity_monitor.xml
@@ -11,8 +11,8 @@
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="0dp"
-        android:layout_height="40dp"
-        android:background="@android:color/darker_gray"
+        android:layout_height="100dp"
+        android:background="@color/color_clearWhite"
         android:elevation="0dp"
         android:minHeight="0dp"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
@@ -20,11 +20,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="100dp"
+        android:layout_marginStart="24dp"
+        android:background="@drawable/header_s"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+    </FrameLayout>
+
     <LinearLayout
         android:id="@+id/body_frame"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="100dp"
         android:background="@color/color_navy_blue"
         android:gravity="center_vertical"
         android:orientation="vertical"
@@ -281,7 +291,7 @@
         android:id="@+id/db_frame"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="100dp"
         android:orientation="vertical"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -383,7 +393,7 @@
         android:id="@+id/info_frame"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="100dp"
         android:orientation="vertical"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -396,6 +406,7 @@
         android:id="@+id/menu_frame"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginTop="100dp"
         android:baselineAligned="false"
         android:orientation="horizontal"
         android:visibility="gone"
