--- a/EkgDroid/app/src/main/res/layout/activity_monitor.xml
+++ b/EkgDroid/app/src/main/res/layout/activity_monitor.xml
@@ -63,6 +63,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="top|right"
+                android:layout_marginRight="100px"
                 android:padding="8dp"
                 android:textColor="@color/color_fresh_green"
                 android:textSize="36sp" />
