--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -15,4 +15,5 @@ block content
     div(style='width:100%; background-color : azure; flex : 4; overflow : auto')
       table(style='width : 100%')
         tbody(id='tableData-body')
-    div(style='flex : 5')
+    div(style='flex : 5; background-color : skyblue; overflow: auto; width : 85vw')
+      canvas(id='monitor')
